--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -347,13 +347,12 @@ views:
         show_header_toggle: false
         entities:
           - climate.annex_hall_thermostat
-          - climate.ballroom_east_thermostat
+          - climate.ballroom_thermostat
           - climate.bedroom_mark_thermostat
-          - climate.hall_east_thermostat
-          - climate.hall_west_thermostat
+          - climate.hall_thermostat
           - climate.kitchen_thermostat
           - climate.library_thermostat
-          - climate.lounge_east_thermostat
+          - climate.lounge_thermostat
           - climate.study_thermostat
           - climate.guest_room_thermostat
           - climate.bedroom_jerome_thermostat
