--- a/packages/bedroom-jerome/groups.yaml
+++ b/packages/bedroom-jerome/groups.yaml
@@ -10,7 +10,7 @@ bedroom_jerome_compact_ui:
   view: false
   entities:
   - input_select.bedroom_jerome_mode
-  - climate.js_bedroom
+  - climate.j_s_bedroom
   - group.g_bedroom_jerome_settings_ui
   - media_player.jeromes_bedroom
 
@@ -18,7 +18,7 @@ bedroom_jerome_setpoints:
   name: "Jerome's Bedroom Setpoints"
   view: false
   entities:
-  - climate.js_bedroom
+  - climate.j_s_bedroom
 
 bedroom_jerome_media_players:
   view: false
