live: Fix js_bedroom_present
js_bedroom away_mode became a separate sensor js_bedroom_tado_mode

--- a/sensors/tado.yaml
+++ b/sensors/tado.yaml
@@ -2,4 +2,4 @@
   sensors:
     js_bedroom_present:
       value_template: >
-        {{ 'not_home' if states.climate.js_bedroom.attributes.away_mode else 'home' }}
+        {{ 'not_home' if states.sensor.js_bedroom_tado_mode.state == "AWAY" else 'home' }}
