--- a/packages/ballroom/mode.yaml
+++ b/packages/ballroom/mode.yaml
@@ -11,8 +11,8 @@ input_select:
     options:
       - 'Off'
       - 'Party'
-      - 'Movie'
       - 'Bright'
+      - 'Movie'
       - 'Manual'
     initial: 'Off'
     icon: mdi:projector
@@ -20,39 +20,28 @@ input_select:
 input_number:
   ballroom_temperature_off:
     name: 'Off Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
     initial: 5
-    step: 1
+    <<: &ballroom_temp_defaults
+      icon: mdi:thermostat
+      unit_of_measurement: "\xB0C"
+      min: 5
+      max: 25
+      step: 1
 
   ballroom_temperature_party:
     name: 'Party Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
     initial: 20
-    step: 1
-
-  ballroom_temperature_movie:
-    name: 'Movie Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
-    initial: 20
-    step: 1
+    <<: *ballroom_temp_defaults
 
   ballroom_temperature_bright:
     name: 'Bright Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
     initial: 20
-    step: 1
+    <<: *ballroom_temp_defaults
+
+  ballroom_temperature_movie:
+    name: 'Movie Temp'
+    initial: 20
+    <<: *ballroom_temp_defaults
 
 automation:
   - alias: ballroom_revert_to_manual
