--- a/packages/bedroom-mark/mode.yaml
+++ b/packages/bedroom-mark/mode.yaml
@@ -15,38 +15,31 @@ input_select:
     name: "Mark's Bedroom Mode"
     options:
       - 'Off'
-      - 'Sleep'
       - 'Play'
+      - 'Sleep'
       - 'Manual'
     initial: 'Off'
 
 input_number:
   bedroom_mark_temperature_off:
     name: 'Off Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
     initial: 10
-    step: 1
-
-  bedroom_mark_temperature_sleep:
-    name: 'Sleep Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
-    initial: 15
-    step: 1
+    <<: &bedroom_mark_temp_defaults
+      icon: mdi:thermostat
+      unit_of_measurement: "\xB0C"
+      min: 5
+      max: 25
+      step: 1
 
   bedroom_mark_temperature_play:
     name: 'Play Temp'
-    icon: mdi:thermostat
-    unit_of_measurement: "\xB0C"
-    min: 5
-    max: 25
     initial: 20
-    step: 1
+    <<: *bedroom_mark_temp_defaults
+
+  bedroom_mark_temperature_sleep:
+    name: 'Sleep Temp'
+    initial: 15
+    <<: *bedroom_mark_temp_defaults
 
 automation:
   - alias: bedroom_mark_revert_to_manual
