--- a/packages/study/package.yaml
+++ b/packages/study/package.yaml
@@ -1,10 +1,139 @@
-homeassistant: !include homeassistant.yaml
-group: !include groups.yaml
-#climate: !include climate.yaml
-#input_select: !include input_select.yaml
-scene: !include scenes.yaml
-#script: !include_dir_merge_named scripts
-sensor: !include sensors.yaml
-switch: !include switches.yaml
+#
+# Study
+#
+
+homeassistant:
+  customize:
+    sensor.study_east_temperature:
+      friendly_name: Study East
+    sensor.study_west_temperature:
+      friendly_name: Study West
+    sensor.study_east_battery:
+      friendly_name: Study East Battery
+      icon: mdi:battery
+    sensor.study_west_battery:
+      friendly_name: Study West Battery
+      icon: mdi:battery
+
+    climate.study_east_comfort_setpoint:
+      min_temp: 5
+      max_temp: 25
+    climate.study_west_comfort_setpoint:
+      min_temp: 5
+      max_temp: 25
+
+group:
+  study:
+    name: Study
+    icon: mdi:printer
+    view: true
+    entities:
+    - sensor.study_temperature
+    - group.study_compact_ui
+    - group.study_appliances
+    - media_player.study
+
+  study_compact_ui:
+    name: Study
+    view: false
+    entities:
+    - input_select.study_mode
+    - climate.study_thermostat
+    - group.g_study_settings_ui
+
+  study_setpoints:
+    name: Study Setpoints
+    view: false
+    entities:
+    - climate.study_east_comfort_setpoint
+    - climate.study_west_comfort_setpoint
+
+  study_lights:
+    name: Study Lights
+    view: false
+    entities: {}
+
+  study_appliances:
+    name: Study Appliances
+    view: false
+    entities:
+    - device_tracker.ricoh213w
+    - device_tracker.canonmg5550
+
+scene:
+  - name: study_off
+    entities:
+      group.study_lights:
+        state: off
+      media_player.study:
+        state: paused
+      media_player.snapcast_client_study:
+        is_volume_muted: true
+
+  - name: study_cosy
+    entities:
+      group.study_lights:
+        state: on
+        brightness_pct: 20
+
+  - name: study_bright
+    entities:
+      group.study_lights:
+        state: on
+        brightness_pct: 100
+
+  - name: study_work
+    entities:
+      group.study_lights:
+        state: on
+        brightness_pct: 100
+
+sensor:
+  - platform: template
+    sensors:
+      study_east_battery:
+        value_template: >
+          {% if states.zwave.study_east %}
+            {{ states.zwave.study_east.attributes.battery_level }}
+          {% else %}
+            unknown
+          {% endif %}
+        unit_of_measurement: '%'
+        entity_id: zwave.study_east
+
+      study_west_battery:
+        value_template: >
+          {% if states.zwave.study_west %}
+            {{ states.zwave.study_west.attributes.battery_level}}
+          {%  else %}
+            unknown
+          {%  endif %}
+        unit_of_measurement: '%'
+        entity_id: zwave.study_west
+
+switch:
+  # Now for supporting mock thermostats only.
+  #  Remove when mock thermostats move to mqtt hvac
+  - name: study_west_demand
+    platform: mqtt
+    command_topic: ha/study/west/demand/command
+    payload_off: 'OFF'
+    payload_on: 'ON'
+    retain: true
+
+  - name: study_east_demand
+    platform: mqtt
+    command_topic: ha/study/east/demand/command
+    payload_off: 'OFF'
+    payload_on: 'ON'
+    retain: true
+
+media_player:
+  - name: Study
+    platform: kodi
+    host: study
+    port: 80
+
 #automation: !include_dir_merge_list automations
-media_player: !include media_players.yaml
+#script: !include_dir_merge_named scripts
+
