--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,7 +15,7 @@ homeassistant:
     package_camera0: !include packages/dahua-cameras.yaml
     package_hottub: !include packages/hottub.yaml
     package_washing_machine: !include packages/washing-machine.yaml
-    package_stream_radio: !include packages/stream-radio.yaml
+    #package_stream_radio: !include packages/stream-radio.yaml
     package_oil_monitor: !include packages/myolive.yaml
     package_multiroom_audio: !include packages/multiroom_audio.yaml
     package_mode: !include packages/mode.yaml
