--- a/packages/stream-radio.yaml
+++ b/packages/stream-radio.yaml
@@ -180,96 +180,57 @@ automation:
 input_select:
   radio_stream_1:
     name: Stream 1
-    options:
-      - None
-      - "Absolute 80s"
-      - "Absolute 60s"
-      - "Absolute 70s"
-      - "Absolute 90s"
-      - "Absolute 00s"
-    initial: None
-    icon: mdi:radio
+    <<: &stream_defaults
+      options:
+        - None
+        - "Absolute 80s"
+        - "Absolute 60s"
+        - "Absolute 70s"
+        - "Absolute 90s"
+        - "Absolute 00s"
+      initial: None
+      icon: mdi:radio
 
   radio_stream_2:
     name: Stream 2
-    options:
-      - None
-      - "Absolute 80s"
-      - "Absolute 60s"
-      - "Absolute 70s"
-      - "Absolute 90s"
-      - "Absolute 00s"
-    initial: None
-    icon: mdi:radio
+    <<: *stream_defaults
 
   radio_stream_3:
     name: Stream 3
-    options:
-      - None
-      - "Absolute 80s"
-      - "Absolute 60s"
-      - "Absolute 70s"
-      - "Absolute 90s"
-      - "Absolute 00s"
-    initial: None
-    icon: mdi:radio
+    <<: *stream_defaults
 
   study_stream:
     name: Study
-    initial: None
     icon: mdi:printer
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: &room_stream_defaults
+      initial: None
+      options:
+        - None
+        - "Stream 1"
+        - "Stream 2"
+        - "Stream 3"
 
   kitchen_stream:
     name: Kitchen
-    initial: None
     icon: mdi:stove
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: *room_stream_defaults
 
   lounge_stream:
     name: Lounge
-    initial: None
     icon: mdi:sofa
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: *room_stream_defaults
 
   library_stream:
     name: Library
-    initial: None
     icon: mdi:library
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: *room_stream_defaults
 
   ballroom_stream:
     name: Ballroom
-    initial: None
     icon: mdi:projector
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: *room_stream_defaults
 
   bedroom_mark_stream:
     name: "Mark's Bedroom"
-    initial: None
     icon: mdi:hotel
-    options:
-      - None
-      - "Stream 1"
-      - "Stream 2"
-      - "Stream 3"
+    <<: *room_stream_defaults
